@@ -4,17 +4,15 @@ import java.io.IOException;
 import java.util.Map;
 
 import uncertain.composite.CompositeMap;
-
 import aurora.presentation.BuildSession;
 import aurora.presentation.ViewContext;
 import aurora.presentation.component.std.config.ComponentConfig;
-import aurora.presentation.component.std.config.InputFieldConfig;
+import aurora.presentation.component.std.config.TextAreaConfig;
 
 public class TextArea extends Component {
 	
 	public static final String VERSION = "$Revision$";
 	private static final String DEFAULT_CLASS = "item-textarea";
-	protected static final String PROPERTITY_READONLY = "readonly";
 	protected static final String CLASSNAME_READONLY = "item-readOnly";
 	protected int getDefaultWidth(){
 		return 150;
@@ -26,9 +24,9 @@ public class TextArea extends Component {
 	
 	protected String getDefaultClass(BuildSession session, ViewContext context){
 		CompositeMap view = context.getView();
+		TextAreaConfig tac = TextAreaConfig.getInstance(view);
 		String wrapClass = DEFAULT_CLASS;
-		boolean readOnly = view.getBoolean(PROPERTITY_READONLY, false);
-		if(readOnly) {
+		if(tac.isReadOnly()) {
 			wrapClass += " "+CLASSNAME_READONLY;
 		}
 		return wrapClass;
@@ -38,12 +36,13 @@ public class TextArea extends Component {
 		super.onCreateViewContent(session, context);
 		CompositeMap view = context.getView();
 		Map map = context.getMap();
-		boolean readOnly = view.getBoolean(PROPERTITY_READONLY, false);
+		TextAreaConfig tac = TextAreaConfig.getInstance(view);
+		boolean readOnly = tac.isReadOnly();
 		if(readOnly) {
-			map.put(PROPERTITY_READONLY, "readonly");
+			map.put(TextAreaConfig.PROPERTITY_READONLY, "readonly");
 		}
-		addConfig(PROPERTITY_READONLY, Boolean.valueOf(readOnly));
-		map.put(ComponentConfig.PROPERTITY_TAB_INDEX, new Integer(view.getInt(ComponentConfig.PROPERTITY_TAB_INDEX, 0)));
-		map.put(CONFIG, getConfigString());		
+		addConfig(TextAreaConfig.PROPERTITY_READONLY, Boolean.valueOf(readOnly));
+		map.put(ComponentConfig.PROPERTITY_TAB_INDEX, new Integer(tac.getTabIndex()));
+		map.put(CONFIG, getConfigString());
 	}
 }
